--- a/packages/lib/posts-snowman/src/index.mdx
+++ b/packages/lib/posts-snowman/src/index.mdx
@@ -1,11 +1,5 @@
 # Hello
 
-## Random Utils
+import Index from "./prose/index.mdx";
 
-import RandomUtils from "./prose/randomUtils.mdx";
-
-<RandomUtils />
-
-import StateMachine from "./prose/state-machine.mdx";
-
-<StateMachine />
+<Index />
